--- a/style.css
+++ b/style.css
@@ -1,17 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     display: flex;
     justify-content: center;
-
+    margin: 0;
+    padding: 0;
 }
 
 header {
     width: 1440px;
     height: 112px;
     padding: 0 81px;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:#66D1FF ;
+    background-color:#66D1FF;
+    font-family: "Montserrat";
+    font-weight: 500;
 }
 
 .header_but {
@@ -26,4 +39,85 @@ header {
 
 .header_phone {
     font-size: 28px;
+    text-decoration: none;
+    color:black;
+}
+
+.main_title {
+    width: 1440px;
+    height: 766px;
+    background-image: url('img/bg_img_1.jpg');
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.main_title_h1 {
+    font-family: Oswald;
+    color:#fff;
+    font-size: 60px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    line-height: 90px;
+    text-shadow: 1px 1px 2px black;
+}
+
+.main_title_text {
+    width: 1060px;
+    height: 117px;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 32px;
+    color:#fff;
+    line-height: 39px;
+    text-shadow: 1px 1px 2px black;
+}
+
+
+.advantages {
+    width: 1440px;
+    height: 998px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #d8f3fe;
+}
+
+.advan_title {
+    font-family: Oswald;
+    font-weight: 500;
+    font-size: 48px;
+    margin-bottom: 100px;
+}
+
+.advan_blocks {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    box-sizing: border-box;
+}
+
+.advan_block {
+    width: 406px;
+    height: 186px;
+}
+
+.advan_block_title {
+    font-family: Oswald;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 32px;
+    margin-bottom: 25px;
+}
+
+.advan_block_text {
+    font-family: Montserrat;
+    font-weight: 400;
+    font-size: 26px;
 }
